apps/hermes-agent/overlays/nishir/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automata-webhook
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-class: automata
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: hermes-agent
      port:
        name: webhook
  ingressClassName: tailscale
  tls:
    - hosts:
        - automata-webhook
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automata
  annotations:
    tailscale.com/proxy-class: automata
    tailscale.com/tags: tag:web
spec:
  defaultBackend:
    service:
      name: hermes-agent
      port:
        name: api
  ingressClassName: tailscale
  tls:
    - hosts:
        - automata
